# cos435-citylearn

./: .gitignore  Makefile  Proposal.md  README.md  Rubric.md  pyproject.toml
apps/dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
configs/: README.md
configs/env/: citylearn_2023.yaml
configs/eval/: default.yaml  mappo_smoke.yaml  official_released.yaml
docs/: benchmark-reference.md  chesca-lite-hybrid-experiment.md  evaluation-splits.md  mappo-experiment-log.md  residual-sac-experiment.md
requirements/: benchmark.txt  dev.txt
results/: README.md
results/final/: README.md
submission/: presentation.pptx  presentation_outline.md  project-proposal.tex
tests/: README.md  test_aggregate_final_sweep.py  test_aggregate_sweep.py  test_api_system.py  test_artifact_api.py  test_baselines_import.py  test_chesca_lite_controller.py  test_cluster_scripts.py  test_config_shapes.py  test_dashboard_app.py  test_export_submission_results.py  test_io.py  test_job_event_store.py  test_job_live_preview_api.py  test_jobs_api.py  test_mappo_checkpoint.py  test_mappo_controller.py  test_mappo_features.py  test_mappo_rollout_buffer.py  test_paths.py  test_playback_store_paths.py  test_ppo_advantage_norm.py  test_ppo_central_sidecar.py  test_ppo_checkpoint.py  test_ppo_log_probs.py  test_ppo_rollout_buffer.py  test_ppo_schedules.py  test_rbc_progress_context.py  test_run_id.py  test_run_store.py  test_runner_registry.py  test_sac_checkpoint.py  test_sac_expert_policy.py  test_sac_rewards.py  test_td3_central_sidecar.py  test_td3_checkpoint.py
(+207 files in other folders)
