[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cos435-citylearn"
version = "0.1.0"
description = "shared scaffold for the cos435 citylearn project"
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [
  { name = "COS435 CityLearn Team" },
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
